# nomad

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  .travis.yml  COPYING  Makefile  Makefile.am  Makefile.gnu.in  Makefile.in  README  README.org  TODOs.org  app.c  app.h  check-guile.in  config.json  configure.ac  emacs.c  emacs.h  guix-local.scm  guix.scm  init.el  main.c  nomad.el  package-lock.json  pre-inst-env.in  run  test.el  test.scm  wemacs.c  wemacs.el
contents/: 404.json
contents/articles/hack-nomad/: index.md
contents/articles/hello-world/: index.md
contents/articles/nomad-bookmark/: index.md
contents/articles/nomad-shroud/: index.md
contents/articles/nomad-web-browser/: index.md
contents/authors/: amar-m-singh.json  mike-rosset.json
contents/css/: main.css
contrib/guix/: guix.scm  gx.bufio.org.pub  install
debian/: changelog  control  copyright  rules
doc/: Makefile  Makefile.am  gendocs_template  manual.css  nomad.org  nomad.texi  urls.texi  version.texi
docker/: Dockerfile  Makefile
etc/: nomad.desktop
etc/images/icons/hicolor/: Makefile.am
ext/: Makefile.am  ext.c  gresource.xml  hints.js
guile/: Makefile.am  app.c  app.h  extension.c  frame.c  frame.h  gresource.xml  minibuffer.h  text.c  text.h  util.c  util.h  webkit.c  webkit.h  webkitproxy.c  webkitproxy.h  webkitsettings.c  webkitsettings.h
m4/: guile-2.2.m4
org/: Makefile  README.html  README.org  README.txt  depends.org
org/gsoc/: ideas.org
pixmaps/: Makefile.am
qt/: ApplicationRoot.qml  BrowserWindow.qml  DevelView.qml  FullScreenNotification.qml  Makefile.am  MiniPopup.qml  Terminal.qml  WebKit.qml  WebView.qml  app.cpp  app.h  backend.cpp  backend.h  backend.js  buffer.cpp  buffer.h  eval.cpp  eval.h  frame.cpp  frame.h  hints.js  keymap.cpp  keymap.h  main.cpp  main.qml  minibuffer.cpp  minibuffer.h  qml.cpp  qml.h  qt.conf  resources.qrc  webview.cpp  webview.h
scheme/: Makefile.am  nomad.scm
scheme/nomad/: api.scm  app.scm  application.scm  bookmark.scm  browser.scm  buffer.scm  commands.scm  curl.scm  display.scm  doc.scm  download.scm  eval.scm  events.scm  frame.scm  graph.scm  help-mode.scm  html.scm  ibuffer.scm  init.scm  keymap.scm  lib.in  lib.scm  log.scm  menu.scm  minibuffer.scm  nomad.scm  options.scm  pass.scm  platform.scm  pointer.scm  proxy.scm  qt.scm  repl.scm  self-doc.scm  server.scm  shell.scm  shroud.scm  terminal.scm  tests.scm  text.scm  (+12 more)
scheme/nomad/emacsy/: text.scm
scheme/nomad/gtk/: application.scm  buffers.scm  cairo.scm  foreign.scm  frame.scm  generics.scm  gi.scm  graph.scm  gtk.scm  menu.scm  terminal.scm  uri.scm  util.scm  web.scm  webview.scm  widget.scm  widgets.scm  window.scm
scheme/nomad/platform/: api.scm
scheme/test-suite/test-suite/: lib.scm
scheme/test-suite/tests/: eval.test  init.test  options.test  util.test
scheme/tests/: browser.scm  buffer.scm  download.scm  eval.scm  frame.scm  graphical.scm  init.scm  interactive.scm  lib.scm  options.scm  proxy.scm  text.scm  util.scm  webkit.scm  webview.scm  widget.scm
scheme/wemacs/: browser.scm  events.scm  init.scm  keymap.scm  repl.scm  server.scm  util.scm  wemacs.scm
src/: Makefile  Makefile.am  app.c  app.h  buffer.c  buffer.h  buffer.ui  dbus-example.c  frame.c  frame.h  gresource.xml  main.c  minibuffer.c  minibuffer.h  nomad.in  request.c  request.h  scheme.c  scheme.h  test.c  util.c  util.h  vte.c  vte.h  webkit.c  webkit.h  webview.c  webview.h  wemacsapp.c  wemacsapp.h  wemacsappwin.c  wemacsappwin.h  window.c  window.h  window.ui
templates/: archive.pug  article.pug  index.pug  layout.pug
test-suite/: Makefile.am  guile-test  test-runner.in
test-suite/tests/: api.scm  application.scm  browser.test  buffer.scm  buffers.scm  doc-test.scm  doc.scm  download.scm  frame.scm  help-mode.scm  ibuffer.scm  init.scm  init.test  options.test  text.scm  uri.scm  util.scm  util.test  views.scm  web.scm
test-suite/tests/gtk/: text.scm  web.scm  widget.scm  window.scm
tools/: coverage.in  guile-env  test-driver  unused.in  unused.scm.in
typelib/: Makefile.am  compositor.c  compositor.h  gresource.xml  main.c  plugin.c  plugin.h  scheme.c  scheme.h  util.c  util.h  wayland.c  wayland.h  webview.c  webview.h
